kubernetes/docsportal/overlays/helpcenter_internal/ingress-oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: "4096"
  labels:
    app.kubernetes.io/instance: helpcenter-internal-oauth
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: document-hosting
    argocd.argoproj.io/instance: hc-internal
  name: document-hosting-oauth
  namespace: hc-internal
spec:
  ingressClassName: nginx
  rules:
  - host: docs.otctest.t-systems.com
    http:
      paths:
      - backend:
          service:
            name: helpcenter-oauth-proxy
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - docs.otctest.t-systems.com
    secretName: helpcenter-int-oauth
